Kuberntes/k8s/deployment_product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  selector:
    matchLabels:
      app: product-server
  replicas: 2
  template:
    metadata:
      labels:
        app: product-server
    spec:
      containers:
      - name: product-server
        image: product:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
