Kuberntes/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: main-server-service
spec:
  selector:
    app: main-server
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
