Kuberntes/k8s/service_product.yml
kind: Service
apiVersion: v1
metadata:
  name: product-service
spec:
  selector:
    app: product-server
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
