Kuberntes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-server-ingress
  labels:
    app.kubernetes.io/name: main-server-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: main-server-service
                port:
                  number: 80
    - http:
        paths:
        - pathType: Prefix
          path: "/api/product"
          backend:
            service:
              name: product-service
              port:
                number: 80
